// Copyright (c) YugaByte, Inc.

package yb.redisserver;

option java_package = "org.yb.redisserver";

service RedisServerService {
}
